# opengl-lesson

./: CMakeLists.txt  main.cpp
Assets/Shaders/: texture.frag  texture.vert
Assets/Shaders/SampleTriangle/: triangle.frag  triangle.vert
Dependencies/: stb_image.cpp
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Lib/: Shader.cpp  Shader.h
